--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         body {
             background: #F0F0F0;
         }
+
+        .btn:hover {
+            background-color: #424242;
+            color: #F3F3F3;
+        }
     </style>
 </head>
 
@@ -57,7 +62,7 @@
 
                 <div class="form-group mb-2 d-flex justify-content-center">
                     <button name="cek" id="cek" onclick="cek()" class="btn mx-auto"
-                        style="border-radius: 15px; background-color: transparent; border: 2px solid #424242;">Generate</button>
+                        style="border-radius: 15px;  border: 2px solid #424242;">Generate</button>
                 </div>
                 <div id="failed" class="d-block text-center mb-2" style="color: red;"></div>
 
