--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <div class="form-group  d-flex justify-content-center mb-4 ">
                     <div class="col-md-2">
                         <select class="form-select" name=" panjang" id="panjang">
+                            <option value="" disabled selected>--Panjang</option>
                             <script>
                                 for (let i = 1; i <= 20; i++) {
                                     document.write("<option class='text-center' id='optionv' value=" + i + ">" + i + "</option>")
